# gst-plugins-base

./: config.h.in  configure  configure.ac  gst-plugins-base-0.10.32.tar.bz2.delta  gst-plugins-base.spec  gst-plugins-base0.10_0.10.32.orig.tar.bz2.delta  gst-plugins-base0.10_0.10.32.orig.tar.bz2.id
debian/: build-deps.in  changelog  control  control.in  gstreamer-plugins-base.install  libgstreamer-plugins-base.symbols  rules
debian/patches/: 0025-Avoid-conflict-with-gst_debug_log2-from-gstreamer.patch  0100-hack-Reconfigure-package.patch  series
docs/: Makefile.in
docs/design/: Makefile.in
docs/libs/: Makefile.in
docs/plugins/: Makefile.in
ext/pango/: Makefile.in  gsttextoverlay.c  gsttextoverlay.h
gst/audiorate/: gstaudiorate.c
gst/encoding/: Makefile.in  gstencodebin.c
gst/ffmpegcolorspace/: avcodec.h  gstffmpegcodecmap.c  gstffmpegcodecmap.h  gstffmpegcolorspace.c  gstffmpegcolorspace.h  imgconvert.c
gst/playback/: Makefile.in  gstplaysink.c
gst/stride/: Makefile.am  armv7.s  convert.c  gststridetransform.c  gststridetransform.h  plugin.c
gst/volume/: gstvolumeorc-dist.c
po/: af.gmo  af.po  az.gmo  az.po  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en_GB.gmo  en_GB.po  es.gmo  es.po  eu.gmo  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  gl.gmo  gl.po  gst-plugins-base-0.10.pot  hu.gmo  hu.po  id.gmo  id.po  it.gmo  it.po  ja.gmo  ja.po  lt.gmo  lt.po  lv.gmo  (+33 more)
sys/xvimage/: xvimagesink.c
tests/check/: Makefile.am  Makefile.in
tests/examples/: Makefile.am  Makefile.in
tests/icles/: Makefile.in  (+2 more)
(+162 files in other folders)
